# Aislebot

./: .gitignore  AisleBot_Setup_Manual.docx  README.md  aislebot_arm.ino  aislebot_arm_v7.ino  aislebot_esp32.ino  aislebot_pid_analysis_v2.py  install.sh
src/mecanum_navigation/: package.xml  setup.py
src/mecanum_navigation/config/: ekf_params.yaml  nav2_params.yaml  slam_params.yaml
src/mecanum_navigation/launch/: navigation.launch.py  slam.launch.py
src/mecanum_robot/: package.xml  setup.py
src/mecanum_robot/launch/: aislebot_full.launch.py  hardware.launch.py  simulation.launch.py
src/mecanum_robot/mecanum_robot/: arm_bridge.py  esp32_bridge.py  gazebo_bridge.py  joy_to_aislebot.py  keyboard_teleop.py  lcd_display.py  mecanum_teleop_asymmetric.py  odometry_publisher.py  phone_dashboard.py
src/mecanum_robot/resource/: dashboard.html
src/mecanum_robot/urdf/: aislebot.urdf
src/mecanum_robot/worlds/: warehouse.world
system/: 99-aislebot.rules  aislebot.service  start_aislebot.sh
