<?xml version="1.0"?>
<package format="3">
  <name>mecanum_navigation</name>
  <version>1.0.0</version>
  <description>AisleBot Nav2 + SLAM configuration</description>
  <maintainer email="aritra@iitb.ac.in">Aritra Das</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
