<?xml version="1.0"?>
<package format="3">
  <name>mecanum_robot</name>
  <version>3.0.0</version>
  <description>AisleBot asymmetric mecanum robot</description>
  <maintainer email="aritra@iitb.ac.in">Aritra Das</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
